--- a/styles-personal-website/navigation.css
+++ b/styles-personal-website/navigation.css
@@ -8,15 +8,17 @@ html {
     text-decoration: none;
     flex-direction: row;
     justify-content: space-around;
-    background-color: rgba(199, 95, 113, 0.9);
+    background: linear-gradient(to right, rgba(199, 95, 113, 0.8), rgba(239, 225, 206, 0.8), rgba(199, 95, 113, 0.8));
     color: black;
     font-family: sans-serif, Verdana;
     font-weight: bold;
-    position: fixed;
     transition: all 0.6s ease-in-out;
     box-shadow: 0 0 10px black;
     border-radius: 8px;
-    width: 100%
+    width: 98%;
+    z-index: 3;
+
+
 }
 
 .header div {
@@ -39,11 +41,4 @@ a {
     text-decoration: none;
 
     color: black
-}
-
-.blog-nav {
-
-    background-color: rgb(202, 150, 202);
-
-    margin-bottom: 1px;
 }
